--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/node": "^6.0.2",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
-    "astro": "^3.2.2"
+    "@astrojs/tailwind": "^5.0.1",
+    "astro": "^3.2.2",
+    "tailwindcss": "^3.3.3"
   }
 }
